# Stream-StockMarket-Kafka-AWS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tf-pipeline-check-staging.yaml  tf-pipeline-deploy-staging.yml
kafka-producer/: producer.py
kafka-stock-market/: README.md  pyproject.toml
kafka-stock-market/kafka-consumer/: consumer.py
kafka-stock-market/streamTweet/: producer.py
streamTweet/: producer.py
tf/CommonModules/S3/: Outputs.tf
tf/KafkaProject/aws/: AWSGlue.tf  Locals.tf  Role.tf  S3.tf
