[tool.poetry]
name = "kafka-stock-market"
version = "0.1.0"
description = ""
authors = ["Moein"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.2.0"
boto3 = "^1.28.50"
configparser = "^6.0.0"
black = "^23.9.1"
isort = "^5.12.0"
tweepy = "^4.14.0"
pytz = "^2023.3.post1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
